<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/buttonMenuAnalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletronica_analogica"

        app:layout_constraintBottom_toTopOf="@+id/buttonMenuDigital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMenuDigital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletronica_digital"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenuSobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenuAnalog" />

    <Button
        android:id="@+id/buttonMenuSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenuDigital" />
</androidx.constraintlayout.widget.ConstraintLayout>